; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-mlxcpld.c_mlxcpld_led_brightness_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-mlxcpld.c_mlxcpld_led_brightness_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { i32 }
%struct.mlxcpld_led_priv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@MLXCPLD_LED_IS_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.led_classdev*, i32)* @mlxcpld_led_brightness_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxcpld_led_brightness_set(%struct.led_classdev* %0, i32 %1) #0 {
  %3 = alloca %struct.led_classdev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlxcpld_led_priv*, align 8
  store %struct.led_classdev* %0, %struct.led_classdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.led_classdev*, %struct.led_classdev** %3, align 8
  %7 = call %struct.mlxcpld_led_priv* @cdev_to_priv(%struct.led_classdev* %6)
  store %struct.mlxcpld_led_priv* %7, %struct.mlxcpld_led_priv** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %2
  %11 = load %struct.mlxcpld_led_priv*, %struct.mlxcpld_led_priv** %5, align 8
  %12 = getelementptr inbounds %struct.mlxcpld_led_priv, %struct.mlxcpld_led_priv* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.mlxcpld_led_priv*, %struct.mlxcpld_led_priv** %5, align 8
  %16 = getelementptr inbounds %struct.mlxcpld_led_priv, %struct.mlxcpld_led_priv* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.mlxcpld_led_priv*, %struct.mlxcpld_led_priv** %5, align 8
  %20 = getelementptr inbounds %struct.mlxcpld_led_priv, %struct.mlxcpld_led_priv* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @mlxcpld_led_store_hw(i32 %14, i32 %18, i32 %22)
  br label %35

24:                                               ; preds = %2
  %25 = load %struct.mlxcpld_led_priv*, %struct.mlxcpld_led_priv** %5, align 8
  %26 = getelementptr inbounds %struct.mlxcpld_led_priv, %struct.mlxcpld_led_priv* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.mlxcpld_led_priv*, %struct.mlxcpld_led_priv** %5, align 8
  %30 = getelementptr inbounds %struct.mlxcpld_led_priv, %struct.mlxcpld_led_priv* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @MLXCPLD_LED_IS_OFF, align 4
  %34 = call i32 @mlxcpld_led_store_hw(i32 %28, i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %24, %10
  ret void
}

declare dso_local %struct.mlxcpld_led_priv* @cdev_to_priv(%struct.led_classdev*) #1

declare dso_local i32 @mlxcpld_led_store_hw(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
